@@ -1,3 +1,7 @@
+
+[[[ newer changes are recorded in the README file only ]]]
+
+
 0.20 :: 9 Nov 2003 :: SVN 71
 	Error output fix
 	Build system fix
